-Finished Login page UI. -Finished Sqlite of login page. -Finished Register page UI. -Finished Sqlite of register page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BBHLCandystore">
         <activity
+            android:name=".listofcandies"
+            android:exported="true" />
+        <activity
             android:name=".loginActivity"
             android:exported="true" />
         <activity
