--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BBHLCandystore">
         <activity
+            android:name=".AddCandyActivity"
+            android:exported="false"
+            android:label="Add Candy page"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".registeractivity"
             android:exported="false" />
         <activity
@@ -19,12 +24,9 @@
             android:name=".loginActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:label="@string/title_activity_login" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="Candy Store">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
