--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         android:theme="@style/Theme.BBHLCandystore">
         <activity
             android:name=".UpdateActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".AddCandyActivity"
             android:exported="false"
-            android:label="Add Candy page"
+            android:label="Thêm kẹo vào dữ liệu"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".registeractivity"
@@ -31,7 +32,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Candy Store">
+            android:label="Cửa hàng kẹo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
