--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,36 +7,41 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/BBHLCandyStore"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BBHLCandystore">
         <activity
-            android:name=".ClientLoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".UpdateActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".AddCandyActivity"
-            android:exported="false"
-            android:label="Thêm kẹo vào dữ liệu"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".registeractivity"
-            android:exported="false" />
-        <activity
-            android:name=".listofcandies"
-            android:exported="true" />
-        <activity
-            android:name=".loginActivity"
+            android:name=".StartupActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ClientLoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".UpdateActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".AddCandyActivity"
+            android:exported="true"
+            android:label="Thêm kẹo vào dữ liệu"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".registeractivity"
+            android:exported="true" />
+        <activity
+            android:name=".listofcandies"
+            android:exported="true" />
+        <activity
+            android:name=".loginActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity"
