--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
@@ -12,6 +13,9 @@ buildscript {
     }
 }
 
+
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
